--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -16,6 +17,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/og": "^0.5.20",
     "autoprefixer": "^10.0.1",
     "class-variance-authority": "^0.7.0",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "next-sitemap": "^4.2.3"
   }
 }
