--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "framework": "nextjs",
-  "buildCommand": "npm run build",
+  "buildCommand": "pnpm run build",
   "outputDirectory": ".next",
-  "installCommand": "npm ci",
-  "devCommand": "npm run dev",
+  "installCommand": "pnpm install",
+  "devCommand": "pnpm run dev",
   "rewrites": [
     {
       "source": "/api/(.*)",
