--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "critters": "^0.0.25",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.294.0",
     "next": "^14.2.30",
